<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btnClose"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_close" />

            <TextView
                android:id="@+id/btnAdd"
                style="@style/txt_Bold16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:onClick="@{}"
                android:layout_marginEnd="20dp"
                android:text="@string/todo_add"
                android:textColor="@color/deep_blue_03" />

            <kong.droid.todo.customui.EditItem
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="16dp"
                app:addHint="@string/add_name" />

            <TextView
                android:id="@+id/tvImportance"
                style="@style/txt_Bold16"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/etName"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:text="@string/add_importance"
                android:textColor="@color/deep_blue_01" />

            <LinearLayout
                android:id="@+id/importContainer"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/tvImportance"
                android:layout_alignTop="@id/tvImportance"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/tvImportance"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="1" />

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="2" />

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="3" />

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="4" />

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="5" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/datePicker"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/importContainer"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/todo_date"
                tools:ignore="MissingConstraints">

                <AutoCompleteTextView
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/chEvery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/datePicker"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:checked="true"
                android:text="@string/add_daily" />

            <TextView
                android:id="@+id/tvTag"
                style="@style/txt_Bold16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chEvery"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/add_tag_info"
                android:textColor="@color/deep_blue_02" />

            <LinearLayout
                android:id="@+id/tagContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTag"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal" />
        </RelativeLayout>
    </FrameLayout>
</layout>