<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="pagerAdapter"
            type="androidx.viewpager2.adapter.FragmentStateAdapter" />

        <variable
            name="viewModel"
            type="kong.droid.todo.viewModel.MainViewModel" />

        <variable
            name="activity"
            type="kong.droid.todo.view.main.MainActivity" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.main.MainActivity">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="80dp"
            android:background="@color/deep_blue_05"
            android:onClick="@{(v)->viewModel.clickBtn(v)}"
            app:fabSize="auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_float_add"
            app:tint="@android:color/white" />


        <kong.droid.todo.customui.AppBar
            android:id="@+id/appBar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:addTitle="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:orientation="horizontal"
            android:adapter="@{pagerAdapter}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/tabBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBar" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/greye0"
            app:layout_constraintBottom_toTopOf="@+id/tabBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/tabBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <kong.droid.todo.customui.TabItem
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:addIcon="@drawable/ic_home_selector"
                app:addTitle="@string/tab_home" />

            <kong.droid.todo.customui.TabItem
                android:id="@+id/list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:addIcon="@drawable/ic_list_selector"
                app:addTitle="@string/tab_list" />

            <kong.droid.todo.customui.TabItem
                android:id="@+id/setting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:addIcon="@drawable/ic_setting_selector"
                app:addTitle="@string/tab_setting" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>